update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 //[Dd]ebug/
-/.vs/
+E:\Documents\Github\C++\DAC415-Programming-Fundamentals\Excercises\Week_06\[James J] Tutorial 06 Exercise 01\.vs
 
 # Prerequisites
 *.d
