--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-//[Dd]ebug/
-E:\Documents\Github\C++\DAC415-Programming-Fundamentals\Excercises\Week_06\[James J] Tutorial 06 Exercise 01\.vs
+[Dd]ebug/
+.vs/
 
 # Prerequisites
 *.d
